Prevent navbar from wrapping on small screens.

--- a/app/assets/stylesheets/days.css.scss
+++ b/app/assets/stylesheets/days.css.scss
@@ -26,7 +26,7 @@
   font-size: 24px;
   line-height: 24px;
   margin-bottom: 20px;
-  padding: 28px 60px 28px 140px;
+  padding: 0 60px 0 140px;
   position: relative;
   &:hover {
     box-shadow: 0 0 0 3px $gray;
@@ -55,6 +55,7 @@
   .name {
     color: $green-sea;
     overflow: hidden;
+    padding: 28px 0;
   }
   .time {
     color: white;
