--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,25 +5,26 @@ body {
 body {
   padding-top: 70px;
 }
+.non-tablet-label {
+  @media (min-width: $screen-sm-min) and (max-width: $screen-md-max) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+}
 header > nav {
-  .navbar-collapse .navbar-nav.navbar-left:first-child {
-    margin-left: 20px;
+  i,
+  img {
+    margin: 0 4px;
   }
-  .navbar-collapse .navbar-nav.navbar-right:last-child {
-    margin-right: 20px;
-  }
-  .navbar-nav [class^="fui-"] {
-    margin-right: 6px;
-  }
-  .student {
-    img {
-      height: 18px;
-      width: 18px;
-      margin: -1px 7px 0 0;
-    }
-    .caret {
-      margin-left: 4px;
-    }
+  img {
+    height: 1em;
+    width: 1em;
   }
   .navbar-btn {
     &.btn-warning {
@@ -35,12 +36,13 @@ header > nav {
     }
   }
   #assistance-request-module {
-    margin-left: 6px;
+    margin-left: 10px;
+    margin-right: 15px;
   }
 }
 
-$side-nav-width: 240px;
 main {
+  $side-nav-width: 240px;
   aside.side-nav {
     @media (min-width: $screen-sm-min) {
       float: left;
